# lowlat

./: .gitignore  CMakeLists.txt  FINDINGS.md  README.md  further.md
.github/workflows/: ci.yml
bench/: CMakeLists.txt  bench_placeholder.cpp  spsc_latency.cpp  spsc_throughput.cpp
docs/images/benchmark-plots/: perf_summary.csv  summary.csv  v1_obv0_absl_percentiles.csv  v1_obv0_stl_percentiles.csv  v1_percentiles.csv  v2_obv0_stl_percentiles.csv  v3_obv0_stl_percentiles.csv  v4_obv0_stl_percentiles.csv  v5_obv0_stl_percentiles.csv  v6_obv0_stl_percentiles.csv  v6_obv1_absl_percentiles.csv  v6_obv1_stl_percentiles.csv
include/lowlat/book/: book_handler.hpp  book_update.hpp  commodity_book_1.hpp  commodity_book_2.hpp  commodity_book_3.hpp  commodity_book_4.hpp  commodity_book_5.hpp  commodity_book_6.hpp  order.hpp  order_book.hpp  order_book_0.hpp  order_pool.hpp
include/lowlat/core/: compiler.hpp  tsc.hpp
include/lowlat/itch/: count_handler.hpp  dispatcher.hpp  messages.hpp  parser.hpp
include/lowlat/log/: async_logger.hpp
include/lowlat/queue/: spsc_queue.hpp
perf-results/: v1_obv0_stl.txt  v2_obv0_stl.txt  v3_obv0_stl.txt  v4_obv0_stl.txt  v5_obv0_stl.txt  v6_obv0_stl.txt  v6_obv1_absl.txt  v6_obv1_stl.txt
scripts/: compare_all.py  parse_perf.py  plot_latencies.py
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test_cross_variant.cpp  test_itch.cpp  test_order_book.cpp  test_parser.cpp  test_placeholder.cpp  test_spsc.cpp
